fix: `CORs` and `JWT role_access extraction`